feat(forum FE): create method create and get comment